tests/sksl/errors/ReservedNameLong.glsl
### Compilation failed:

error: 1: expected an identifier, but found 'long'
1 error
